<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.calculatorapp.calculator.CalculatorViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".calculator.CalculatorFragment">

            <Button
                android:id="@+id/sevenButton"
                style="@style/numberButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onNumber(7)}"
                android:text="@string/seven"
                app:layout_constraintBottom_toTopOf="@+id/fourButton"
                app:layout_constraintEnd_toStartOf="@+id/eightButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <Button
                android:id="@+id/fourButton"
                style="@style/numberButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onNumber(4)}"
                android:text="@string/four"
                app:layout_constraintBottom_toTopOf="@+id/oneButton"
                app:layout_constraintEnd_toStartOf="@+id/fiveButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sevenButton" />

            <Button
                android:id="@+id/oneButton"
                style="@style/numberButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onNumber(1)}"
                android:text="@string/one"
                app:layout_constraintBottom_toTopOf="@+id/zeroButton"
                app:layout_constraintEnd_toStartOf="@+id/twoButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fourButton" />

            <Button
                android:id="@+id/zeroButton"
                style="@style/numberButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onNumber(0)}"
                android:text="@string/zero"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/decimalButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/oneButton" />

            <Button
                android:id="@+id/eightButton"
                style="@style/numberButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onNumber(8)}"
                android:text="@string/eight"
                app:layout_constraintBottom_toTopOf="@+id/fiveButton"
                app:layout_constraintEnd_toStartOf="@+id/nineButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/sevenButton"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <Button
                android:id="@+id/fiveButton"
                style="@style/numberButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onNumber(5)}"
                android:text="@string/five"
                app:layout_constraintBottom_toTopOf="@+id/twoButton"
                app:layout_constraintEnd_toStartOf="@+id/sixButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/fourButton"
                app:layout_constraintTop_toBottomOf="@+id/eightButton" />

            <Button
                android:id="@+id/twoButton"
                style="@style/numberButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onNumber(2)}"
                android:text="@string/two"
                app:layout_constraintBottom_toTopOf="@+id/decimalButton"
                app:layout_constraintEnd_toStartOf="@+id/threeButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/oneButton"
                app:layout_constraintTop_toBottomOf="@+id/fiveButton" />

            <Button
                android:id="@+id/decimalButton"
                style="@style/numberButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onDecimal()}"
                android:text="@string/decimal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/equalButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/zeroButton"
                app:layout_constraintTop_toBottomOf="@+id/twoButton" />

            <Button
                android:id="@+id/nineButton"
                style="@style/numberButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onNumber(9)}"
                android:text="@string/nine"
                app:layout_constraintBottom_toTopOf="@+id/sixButton"
                app:layout_constraintEnd_toStartOf="@+id/numOpDivider"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/eightButton"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <Button
                android:id="@+id/sixButton"
                style="@style/numberButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onNumber(6)}"
                android:text="@string/six"
                app:layout_constraintBottom_toTopOf="@+id/threeButton"
                app:layout_constraintEnd_toStartOf="@+id/numOpDivider"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/fiveButton"
                app:layout_constraintTop_toBottomOf="@+id/nineButton" />

            <Button
                android:id="@+id/threeButton"
                style="@style/numberButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onNumber(3)}"
                android:text="@string/three"
                app:layout_constraintBottom_toTopOf="@+id/equalButton"
                app:layout_constraintEnd_toStartOf="@+id/numOpDivider"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/twoButton"
                app:layout_constraintTop_toBottomOf="@+id/sixButton" />

            <Button
                android:id="@+id/equalButton"
                style="@style/numberButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equals"
                android:onClick="@{() -> viewModel.onEquals()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/numOpDivider"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/decimalButton"
                app:layout_constraintTop_toBottomOf="@+id/threeButton" />

            <ImageButton
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:contentDescription="@string/delete_description"
                android:onClick="@{() -> viewModel.onDelete()}"
                android:src="@drawable/ic_baseline_backspace_24"
                app:layout_constraintBottom_toTopOf="@+id/divideButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/numOpDivider"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:tint="@color/deep_orange_700" />

            <Button
                android:id="@+id/divideButton"
                style="@style/calculatorButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onOperand('/')}"
                android:text="@string/division"
                app:layout_constraintBottom_toTopOf="@+id/multiplyButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/numOpDivider"
                app:layout_constraintTop_toBottomOf="@+id/deleteButton" />

            <Button
                android:id="@+id/multiplyButton"
                style="@style/calculatorButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onOperand('x')}"
                android:text="@string/multiplication"
                app:layout_constraintBottom_toTopOf="@+id/subtractButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/numOpDivider"
                app:layout_constraintTop_toBottomOf="@+id/divideButton" />

            <Button
                android:id="@+id/additionButton"
                style="@style/calculatorButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onOperand('+')}"
                android:text="@string/addition"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/numOpDivider"
                app:layout_constraintTop_toBottomOf="@+id/subtractButton" />

            <Button
                android:id="@+id/subtractButton"
                style="@style/calculatorButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewModel.onOperand('-')}"
                android:text="@string/subtract"
                app:layout_constraintBottom_toTopOf="@+id/additionButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/numOpDivider"
                app:layout_constraintTop_toBottomOf="@+id/multiplyButton" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#00FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/toggleDRButton"
                    style="@style/numberButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:onClick="@{() -> viewModel.onToggle()}"
                    android:text="@{viewModel.toggleState}"
                    android:textColor="@color/deep_orange_700"
                    tools:text="DEG" />

                <TextView
                    android:id="@+id/calcutationText"
                    style="@style/calculationStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@{viewModel.calculationString}"
                    tools:text="48.2+1*2" />

                <TextView
                    android:id="@+id/resultText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="200dp"
                    android:layout_marginBottom="20dp"
                    app:resultValue="@{viewModel.result}"
                    tools:text="50.2"
                    style="@style/resultsStyle" />
            </androidx.cardview.widget.CardView>

            <View
                android:id="@+id/numOpDivider"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/divideButton"
                app:layout_constraintStart_toEndOf="@+id/nineButton"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>